<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_event_name"
        android:textSize="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/tv_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:textSize="24dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/tv_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_start_date"
        android:textSize="24dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_event_name"
        />

    <TextView
        android:id="@+id/tv_event_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_start_time"
        android:textSize="24dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/tv_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_end_date"
        android:textSize="24dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_event_start_time"
        />

    <TextView
        android:id="@+id/tv_event_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_end_time"
        android:textSize="24dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_event_desc"
        android:textSize="24dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_event_end_time"
        />

    <TextView
        android:id="@+id/tv_event_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_desc"
        android:textSize="24dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_delete"/>



</RelativeLayout>